--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint": "eslint --cache --fix ."
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.14",
     "classnames": "^2.3.2",
     "formik": "^2.4.2",
     "react": "^18.2.0",
